--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       - ./:/var/www/html
     networks:
       - laravel
-
+    depends_on:
+      - postgres
 
   nginx:
     image: nginx:alpine
@@ -20,20 +21,20 @@ services:
       - ./nginx.conf/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - laravel
+    depends_on:
+      - app
 
-
-  mysql:
-    image: mysql:8.0
-    container_name: laravel_mysql
+  postgres:
+    image: postgres:15
+    container_name: laravel_postgres
     environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_PASSWORD: secret
-      MYSQL_USER: laravel
+      POSTGRES_DB: laravel
+      POSTGRES_USER: laravel
+      POSTGRES_PASSWORD: secret
     ports:
-      - "3306:3306"
+      - "5432:5432"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - laravel
 
@@ -42,4 +43,4 @@ networks:
     driver: bridge
 
 volumes:
-  mysql_data:
+  postgres_data:
