--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     container_name: laravel_tileserver
     ports:
       - "8081:8080"
+    environment:
+      - CORS=*
     volumes:
       - ./map-data:/data
     networks:
