--- a/road-check/package.json
+++ b/road-check/package.json
@@ -15,6 +15,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
-        "leaflet": "^1.9.4"
+        "leaflet": "^1.9.4",
+        "leaflet.vectorgrid": "^1.3.0"
     }
 }
