--- a/nginx.conf/nginx.conf
+++ b/nginx.conf/nginx.conf
@@ -12,8 +12,12 @@ server {
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
+
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
+
+        fastcgi_param HTTP_AUTHORIZATION $http_authorization;
+        fastcgi_param Authorization $http_authorization;
     }
 
     location ~ /\.ht {
