--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: '3.8'
 
 services:
   app:
-    build: .
+    build: ./road-check
     container_name: laravel_app
     volumes:
-      - ./:/var/www/html
+      - ./road-check:/var/www/html
+    command: sh -c "chown -R www-data:www-data /var/www/html/storage && chown -R www-data:www-data /var/www/html/bootstrap/cache && php-fpm"
     networks:
       - laravel
     depends_on:
@@ -17,7 +18,7 @@ services:
     ports:
       - "8000:80"
     volumes:
-      - ./:/var/www/html
+      - ./road-check:/var/www/html
       - ./nginx.conf/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - laravel
