--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 # Node
 road-check-mobile/node_modules/
+road-check/node_modules/
 npm-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+
+# Build outputs
+road-check-mobile/dist/
+road-check-mobile/build/
+road-check-mobile/www/
+road-check/public/build/
+road-check/public/hot
 
 # Capacitor
 road-check-mobile/capacitor.config.json.bak
@@ -17,6 +25,27 @@ road-check-mobile/android/local.properties
 road-check-mobile/android/*.iml
 road-check-mobile/android/**/.DS_Store
 
+# iOS (si vous l'ajoutez plus tard)
+road-check-mobile/ios/App/App/config.json
+road-check-mobile/ios/App/App/capacitor.config.json
+
+# Laravel (road-check)
+road-check/.env
+road-check/.env.*
+road-check/storage/app/public/*
+!road-check/storage/app/public/.gitignore
+road-check/storage/framework/cache/data/*
+!road-check/storage/framework/cache/data/.gitignore
+road-check/storage/framework/sessions/*
+!road-check/storage/framework/sessions/.gitignore
+road-check/storage/framework/views/*
+!road-check/storage/framework/views/.gitignore
+road-check/storage/logs/*
+!road-check/storage/logs/.gitignore
+road-check/vendor/
+road-check/bootstrap/cache/*
+!road-check/bootstrap/cache/.gitignore
+
 # Env & secrets
 road-check-mobile/.env
 road-check-mobile/.env.*
@@ -24,9 +53,28 @@ road-check-mobile/firebase-service-account.json
 road-check-mobile/google-services.json
 road-check-mobile/GoogleService-Info.plist
 
+# Firebase
+.firebase/
+.firebaserc
+firebase-debug.log
+firebase-debug.*.log
+
+# Testing & Coverage
+road-check-mobile/coverage/
+road-check-mobile/test-results/
+road-check/coverage/
+
 # IDE / OS
 .DS_Store
 Thumbs.db
 .idea/
 .vscode/
 *.log
+*.swp
+*.swo
+
+# Database & Temporary files
+bd/backups/
+*.sql.backup
+*.tmp
+.tmp/
