--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "require": {
-        "kreait/laravel-firebase": "^3.4",
-        "kreait/firebase-php": "^5.26"
+        "kreait/laravel-firebase": "^3.4"
     }
 }
