--- a/road-check-mobile/package.json
+++ b/road-check-mobile/package.json
@@ -27,6 +27,7 @@
     "@ionic/vue": "^8.7.16",
     "@ionic/vue-router": "^8.7.16",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "firebase": "^12.7.0",
     "ionicons": "^7.0.0",
     "leaflet": "^1.9.4",
