--- a/road-check/.env.example
+++ b/road-check/.env.example
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Firebase Configuration
+FIREBASE_CREDENTIALS=storage/firebase/firebase_credentials.json
+FIREBASE_SIMULATE=false
