--- a/road-check-mobile/package.json
+++ b/road-check-mobile/package.json
@@ -20,6 +20,7 @@
     "@capacitor/geolocation": "^7.1.7",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.3",
+    "@capacitor/local-notifications": "^6.1.3",
     "@capacitor/preferences": "^7.0.2",
     "@capacitor/push-notifications": "^7.0.4",
     "@capacitor/status-bar": "7.0.3",
