--- a/map-data/config.json
+++ b/map-data/config.json
@@ -14,6 +14,12 @@
   "data": {
     "antananarivo": {
       "mbtiles": "antananarivo.mbtiles"
+    },
+    "antananarivo_analamanga": {
+      "mbtiles": "antananarivo_analamanga.mbtiles"
+    },
+    "madagascar": {
+      "mbtiles": "madagascar.mbtiles"
     }
   }
 }
